--- a/src/pages/Details/styles.css
+++ b/src/pages/Details/styles.css
@@ -29,6 +29,7 @@
 
 .details--info {
   margin-bottom: 30px;
+  
 }
 
 .details--info h3 {
@@ -39,6 +40,8 @@
 
 .details--info h3.positive{
   background: #46d369;
+  color: #000;
+  width: max-content;
 }
 
 .details--info h3.negative{
@@ -67,10 +70,24 @@
 .details a:hover {
   opacity: 0.7;
 }
-
+.viewtrailer{
+  display: flex;
+  align-items: center;
+  border: 2px solid white;
+  width: max-content;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 20px 0px 20px 0px;
+  cursor: pointer;
+}
+.viewtrailer:hover{
+  /* padding: 10px 15px 10px 15px; */
+  border: 2px solid red;
+}
 .details--viewtrailer {
-    background-color: #FFF;
-    color: #000;
+ 
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 .details--viewtrailer svg {
