--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -40,12 +40,59 @@ header.black {
 .header--logo img {
     height: 25px;
 }
-
+.header-user-mono{
+    display: flex;
+    flex-direction: column;
+}
 .header--user {
     height: 30px;
 }
 
-.header--user img {
-    height: 100%;
+.dropbtn img {
+    height: 35px;
     border-radius: 3px;
 }
+
+.dropbtn {
+    color: white;
+    padding: 5px;
+    font-size: 16px;
+    border: none;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    right: 0px;
+    border: 2px solid rgba(255, 0, 0, 0);
+    border-radius: 3px;
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: max-content;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    font-size: smaller;
+    color: rgb(255, 255, 255);
+    padding: 8px 12px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: rgb(176, 62, 62);}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e4100;}
