--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-color: #111;
+  background-color: #111 !important;
   color: #FFF;
   margin: 0;
   font-family: 'Roboto', sans-serif;
