rate movie merged

--- a/src/components/rateMovie/rateMovie.css
+++ b/src/components/rateMovie/rateMovie.css
@@ -1,6 +1,6 @@
 .Dialograting{
     height: 30vh;
-    width: 40vw;
+    width: 400px;
     display: flex;
     background-color: black;
     justify-content: center;
