--- a/src/pages/login/style.css
+++ b/src/pages/login/style.css
@@ -14,7 +14,7 @@
     color: #ffffff;
 }
 .login-footer{
-    font-size: small;
+    font-size: medium;
     margin-top: 30px;
     margin-bottom: 20px;;
     text-align: initial;
