--- a/src/pages/ManageProfile/ManageProfile.css
+++ b/src/pages/ManageProfile/ManageProfile.css
@@ -103,7 +103,7 @@
     font-weight: 600;
     font-size: large;
     width: 100px;
-    height: 30px;
+    height: 35px;
 }
 .button-section-2:hover,.button-section-3:hover{
     border: 1px solid red;
@@ -155,8 +155,8 @@
 .back-button{
     font-size: larger;
     position: absolute;
-    top: 100px;
-    left: 330px;
+    top: 13%;
+    left: 21.5%;
     display: flex;
     align-items: center;
     border: 1px solid gray;
@@ -165,4 +165,24 @@
 }
 .back-button:hover{
     border: 1px solid red;
+}
+.option-select{
+    color: black;
+}
+.maturity-select{
+    border-radius: 3px;
+    font-size: large;
+    margin-top: 0px;
+    font-weight: 600;
+    background-color: gray;
+    color: black;
+    padding: 10px;
+    height: 40px;
+    /* width: 35%; */
+}
+.dropdown-icon{
+    position: absolute;
+    top:62.5%;
+    right: 35%;
+    color: black;
 }
