--- a/src/pages/ManageProfile/ManageProfile.css
+++ b/src/pages/ManageProfile/ManageProfile.css
@@ -123,6 +123,10 @@
     align-items: center;
     padding: 20px;
     height: 30px;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .input-div{
     margin-top: 5px;
