--- a/src/pages/ManageProfile/ManageProfile.css
+++ b/src/pages/ManageProfile/ManageProfile.css
@@ -23,7 +23,7 @@
     border-radius: 5px;
 }
 .main-div{
-    width: 60vw;
+    width: max-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -160,7 +160,7 @@
     font-size: larger;
     position: absolute;
     top: 13%;
-    left: 21.5%;
+    left: 24.3%;
     display: flex;
     align-items: center;
     border: 1px solid gray;
